xmoto-web-site/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: xmoto-web-site

spec:
  replicas: 2
