xmoto-web-site/overlays/prod/www-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: xmoto-web-site-route-prod-www-redirect
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"

spec:
  parentRefs:
    - name: main
      namespace: gateway

  # TODO
  # hostnames:
  #   - www.xmoto.org

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: xmoto.org
            statusCode: 301
